--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <app-header></app-header>
       <router-outlet></router-outlet>
     </div>
   </div>
